[package]
name = "async-gql"
version = "0.1.0"
authors = ["SaltyAom <aomkirby123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.2", default-features = false }
async-graphql = { version = "2.10.1", features = ["apollo_tracing"] }
async-graphql-actix-web = "2.9.15"